--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 <!-- Content -->
 <div class="container content">
 	<div class="wrapper">
-
-		<article>
+		<section>
 
 			<header>
 				<h1>Article Header</h1>
@@ -45,18 +44,24 @@
 			</header>
 
 			<div class="columns-container">
-				<section>
-					<h2>Section</h2>
+				<article>
+					<header>
+						<h1>article</h1>
+					</header>
 					<p>Call me Ishmael. Some years ago - never mind how long precisely - having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen, and regulating the circulation.</p>
-				</section>
-				<section>
-					<h2>Section</h2>
+				</article>
+				<article>
+					<header>
+						<h1>article</h1>
+					</header>
 					<p>Call me Ishmael. Some years ago - never mind how long precisely - having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen, and regulating the circulation.</p>
-				</section>
-				<section>
-					<h2>Section</h2>
+				</article>
+				<article>
+					<header>
+						<h1>article</h1>
+					</header>
 					<p>Call me Ishmael. Some years ago - never mind how long precisely - having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen, and regulating the circulation.</p>
-				</section>
+				</article>
 			</div>
 
 			<footer>
@@ -64,8 +69,7 @@
 					<p>Call me Ishmael. Some years ago - never mind how long precisely - having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world.</p>
 			</footer>
 
-		</article>
-
+		</section>
 	</div>
 </div><!-- /Content -->
 
